k8s/legendaries/mattermost/mattermost.yaml
# ---
# apiVersion: helm.cattle.io/v1
# kind: HelmChart
# metadata:
#   name: mattermost
#   namespace: mattermost
# spec:
#   repo: https://helm.mattermost.com
#   chart: mattermost-team-edition
#   version: 5.5.0
#   valuesContent: |-
#     ingress:
#       enabled: true
#       hosts:
#         - chat.hannahs.family
#     mysql:
#       enabled: false
#     externalDB:
#       enabled: true
#     serviceAccount:
#       create: true
---
# Source: mattermost-team-edition/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost
  namespace: mattermost
  labels:
    app.kubernetes.io/name: mattermost-team-edition
    app.kubernetes.io/instance: mattermost
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: mattermost-team-edition-5.5.0
spec:
  selector:
    app.kubernetes.io/name: mattermost-team-edition
    app.kubernetes.io/instance: mattermost
    app.kubernetes.io/managed-by: Helm
  type: ClusterIP
  ports:
    - port: 8065
      targetPort: http
      protocol: TCP
      name: mattermost
---
# Source: mattermost-team-edition/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mattermost
  namespace: mattermost
  labels:
    app.kubernetes.io/name: mattermost-team-edition
    app.kubernetes.io/instance: mattermost
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: mattermost-team-edition-5.5.0
  annotations:
    operator.1password.io/item-path: vaults/wusn2jxjimwouyjyaqp654h7vq/items/hsjn5xfugzmyla7qc3untpbl5u
    operator.1password.io/item-name: &1password mattermost-1password
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mattermost-team-edition
      app.kubernetes.io/instance: mattermost
      app.kubernetes.io/managed-by: Helm
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mattermost-team-edition
        app.kubernetes.io/instance: mattermost
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: mattermost-team-edition-5.5.0
    spec:
      serviceAccountName: mattermost
      containers:
        - name: mattermost
          image: mattermost/mattermost-team-edition:6.0.2
          ports:
            - name: http
              containerPort: 8065
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 90
            timeoutSeconds: 5
            periodSeconds: 15
            httpGet:
              path: /api/v4/system/ping
              port: http
          readinessProbe:
            initialDelaySeconds: 15
            timeoutSeconds: 5
            periodSeconds: 15
            httpGet:
              path: /api/v4/system/ping
              port: http
          resources: {}
---
# Source: mattermost-team-edition/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mattermost
  namespace: mattermost
  labels:
    app.kubernetes.io/name: mattermost-team-edition
    app.kubernetes.io/instance: mattermost
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: mattermost-team-edition-5.5.0
  annotations:
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: &hostname chat.hannahs.family
      http:
        paths:
          - backend:
              service:
                name: mattermost
                port:
                  number: 8065
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *hostname
      secretName: *hostname
# apiVersion: "networking.k8s.io/v1beta1"
# kind: Ingress
# metadata:
#   name: mattermost-mattermost-team-edition
#   labels:
#     app.kubernetes.io/name: mattermost-team-edition
#     app.kubernetes.io/instance: mattermost
#     app.kubernetes.io/managed-by: Helm
#     helm.sh/chart: mattermost-team-edition-5.5.0
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
# spec:
#   rules:
#     - host: "chat.hannahs.family"
#       http:
#         paths:
#           - path: /
#             backend:
#               serviceName: mattermost-team-edition
#               servicePort: 8065
